docs/funcionalidades
